--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,4 +12,5 @@ jobs:
 #    - run: bundle install # bundle exec rake
 #    - run: yarn install --check-files
 #    - run: bin/rake db:migrate
+     - run: bin/rails test
 
