--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
       with:
         ruby-version: 2.7.2 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-     - run: echo "hello world"
+     - run: echo hello world
 #    - run: bundle install # bundle exec rake
 #    - run: yarn install --check-files
 #    - run: bin/rake db:migrate
