--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,10 +9,13 @@ jobs:
       with:
         ruby-version: 2.7.2 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+# oh my god, the number of spaces before - is important (must be 4)
 #    - run: pwd
-    - run: echo hello world
+#    - run: echo hello world
 #    - run: bundle install # bundle exec rake
 #    - run: yarn install --check-files
 #    - run: bin/rake db:migrate
-#    - run: rails test
+    - run: rails test
+      working-directory: ./bin
+
 
