--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,4 +15,5 @@ jobs:
 #    - run: bundle install # bundle exec rake
 #    - run: yarn install --check-files
 #    - run: bin/rake db:migrate
-    - run: rails test
+#    - run: rails test
+    - run: find / -name rails 2>/dev/null -print
