--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,5 +17,6 @@ jobs:
 #    - run: bin/rake db:migrate
 #    - run: rails test
 #    - run: find / -name rails 2>/dev/null -print
+    - run: find $GITHUB_WORKSPACE -name rails 2>/dev/null -print
 # /home/runner/work/reactrails6/reactrails6/vendor/bundle/ruby/2.7.0/bin/rails
-    - run: $GITHUB_WORKSPACE/vendor/bundle/ruby/2.7.2/bin/rails test
+#    - run: $GITHUB_WORKSPACE/vendor/bundle/ruby/2.7.2/bin/rails test
